# MetaFuse

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  run_examples.sh
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rfc.yml
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  cloud-tests.yml  coverage.yml  lint.yml
crates/catalog-api/: Cargo.toml
crates/catalog-api/src/: alerting.rs  api_keys.rs  audit.rs  classification.rs  contracts.rs  control_plane.rs  lib.rs  main.rs  metrics.rs  multi_tenant.rs  quality.rs  rate_limiting.rs  tenant_resolver.rs  test_utils.rs  usage_analytics.rs
crates/catalog-api/tests/: api_integration_tests.rs  control_plane_integration_tests.rs  enterprise_feature_tests.rs  error_response_tests.rs  multi_region_tests.rs  quota_enforcement_tests.rs  rbac_integration_tests.rs  security_integration_tests.rs  (+3 more)
crates/catalog-cli/: Cargo.toml
crates/catalog-core/: Cargo.toml
crates/catalog-delta/: Cargo.toml
crates/catalog-delta/src/: lib.rs
crates/catalog-delta/tests/: delta_reader_tests.rs
crates/catalog-emitter/: Cargo.toml
crates/catalog-storage/: Cargo.toml
docs/: # Lakehouse Catalog: Complete Architectu.md  MIGRATION-v0.5.md  api-reference.md  architecture.md  cloud-emulator-tests.md  deployment-aws.md  deployment-gcp.md  getting-started.md  roadmap.md
examples/: README.md  lineage_tracking.rs  simple_pipeline.rs
tests/: integration_test.rs
(+17 files in other folders)
